adjust spacing and fix nav
nav actually shows up in host and adjust spacing to not

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -363,7 +363,7 @@ template {
 }
 
 .spacing {
-  padding: 160px 0 160px 0;
+  padding: 128px 0 128px 0;
 }
 
 body {
