--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -13,7 +13,7 @@
 }
 
 .spacing{
-    padding: 160px 0 160px 0;
+    padding: 128px 0 128px 0;
 }
 body{
     background: $darkmodebg;
